# teach-cpp-autograding

./: README.md
Assignments/: COPYRIGHT
Assignments/hw0/: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md  main.cpp
Assignments/hw0/src/: CMakeLists.txt  PrimeNumber.cpp  PrimeNumber.h
Assignments/hw0/test/: CMakeLists.txt
Assignments/hw0/test/basic_tests/: CMakeLists.txt  basic_check.cpp  prime_number_check.cpp
Assignments/hw1/: main.cpp  (+4 more)
Assignments/hw1/hw1_tests/: CMakeLists.txt
Assignments/hw1/hw1_tests/00_triangle_basic_tests/: CMakeLists.txt  triangle_basic_tests.cpp
Assignments/hw1/hw1_tests/01_valid_triangle_tests/: CMakeLists.txt  valid_triangle_tests.cpp
Assignments/hw1/hw1_tests/02_triangle_perimeter_tests/: CMakeLists.txt  triangle_perimeter_tests.cpp
Assignments/hw1/hw1_tests/03_triangle_area_tests/: CMakeLists.txt  triangle_area_tests.cpp
Assignments/hw1/hw1_tests/04_triangle_determining_tests/: CMakeLists.txt  triangle_determining_tests.cpp
Assignments/hw1/hw1_tests/basic_tests/: CMakeLists.txt  basic_check.cpp
Assignments/hw1/hw1_tests/lib/gtest-1.7.0/: CMakeLists.txt
Assignments/hw1/src/: CMakeLists.txt  triangle.cpp  triangle.hpp  triangle_Interface.hpp
Assignments/hw2/: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
Assignments/hw2/hw2_tests/: CMakeLists.txt
Assignments/hw2/hw2_tests/00_basic_tests/: CMakeLists.txt
Assignments/hw2/hw2_tests/01_constructor_tests/: CMakeLists.txt  constructor_tests.cpp
Assignments/hw2/hw2_tests/02_push_to_stack_tests/: CMakeLists.txt  pust_tests.cpp
Assignments/hw2/hw2_tests/03_pop_from_stack_tests/: CMakeLists.txt  pop_tests.cpp
Assignments/hw2/hw2_tests/04_peek_tests/: CMakeLists.txt  peek_tests.cpp
Assignments/hw2/hw2_tests/05_empty_tests/: CMakeLists.txt  is_empty_tests.cpp
Assignments/hw2/hw2_tests/06_copy_constructor_test/: CMakeLists.txt  copy_constructor_tests.cpp
Assignments/hw2/hw2_tests/07_get_pointer_to_tests/: CMakeLists.txt  get_pointer_to_tests.cpp
Assignments/hw2/src/: CMakeLists.txt  DLinkedStack.hpp  Node.hpp  StackInterface.hpp  temp.cpp
Assignments/hw3/hw3_tests/: CMakeLists.txt
Assignments/hw3/hw3_tests/00_basic_tests/: CMakeLists.txt  basic_check.cpp
Assignments/hw3/hw3_tests/01_constructor_test/: CMakeLists.txt  constructor_test.cpp
Assignments/hw3/hw3_tests/02_add_to_list_test/: CMakeLists.txt  add_to_list_test.cpp
Assignments/hw3/hw3_tests/03_remove_test/: CMakeLists.txt  remove_test.cpp
Assignments/hw3/hw3_tests/04_is_empty_test/: CMakeLists.txt  is_empty_test.cpp
Assignments/hw3/hw3_tests/05_size_test/: CMakeLists.txt  size_test.cpp
Assignments/hw3/hw3_tests/06_contains_test/: CMakeLists.txt  contains_test.cpp
Assignments/hw3/hw3_tests/07_get_frequency_test/: CMakeLists.txt  get_frequency_test.cpp
Assignments/hw3/hw3_tests/08_copy_constructor_test/: CMakeLists.txt  copy_constructor_test.cpp
Assignments/hw3/hw3_tests/09_head_ptr_test/: CMakeLists.txt  head_ptr_test.cpp
Assignments/hw3/hw3_tests/10_tail_ptr_test/: CMakeLists.txt  tail_ptr_test.cpp
Assignments/hw3/hw3_tests/11_mid_ptr_test/: CMakeLists.txt  mid_ptr_test.cpp
Assignments/hw3/src/: CMakeLists.txt  Node.hpp  SortedDoublyLinkedList.hpp  temp.hpp
Assignments/hw4/: .travis.yml  CMakeLists.txt  README.md  main.cpp
Assignments/hw4/SDL/: CMakeLists.txt  main.cpp
Assignments/hw4/hw4_tests/: CMakeLists.txt
Assignments/hw4/hw4_tests/00_basic_tests/: CMakeLists.txt
Assignments/hw4/hw4_tests/01_constructor_tests/: CMakeLists.txt  constructor_tests.cpp
Assignments/hw4/hw4_tests/02_area_tests/: CMakeLists.txt  area_tests.cpp
Assignments/hw4/hw4_tests/03_center_point_tests/: CMakeLists.txt  cneter_point_tests.cpp
Assignments/hw4/hw4_tests/04_shape_attribute_tests/: CMakeLists.txt  shape_attribute_tests.cpp
Assignments/hw4/hw4_tests/05_exceptions_tests/: CMakeLists.txt  exception_tests.cpp
Assignments/hw4/src/: CMakeLists.txt  Circle.h  CustomException.h  Point2D.h  Rectangle.h  Shape.h  Square.h  temp.cpp
Assignments/hw5/: .travis.yml  CMakeLists.txt  README.md  main.cpp
Assignments/hw5/hw5_tests/: CMakeLists.txt
Assignments/hw5/hw5_tests/00_BasicTest/: CMakeLists.txt  basic_check.cpp
Assignments/hw5/hw5_tests/01_BasicConstructorTest/: CMakeLists.txt  basic_constructor_tests.cpp
Assignments/hw5/hw5_tests/02_AdditionTests/: CMakeLists.txt  addition_tests.cpp
Assignments/hw5/hw5_tests/03_SubtractionTests/: CMakeLists.txt  subtraction_tests.cpp
Assignments/hw5/hw5_tests/04_ScalarMultiplicationTests/: CMakeLists.txt  scalar_multiplication_tests.cpp
Assignments/hw5/hw5_tests/05_MatrixMultiplicationTests/: CMakeLists.txt  matrix_multiplication_tests.cpp
Assignments/hw5/hw5_tests/06_MatrixMultiplicationVariableSizesTests/: CMakeLists.txt  multiplication_size_tests.cpp
Assignments/hw5/hw5_tests/07_BasicExceptionTest/: CMakeLists.txt  basic_exception_tests.cpp
Assignments/hw5/hw5_tests/08_AdditionExceptionTest/: CMakeLists.txt  addition_exception_test.cpp
Assignments/hw5/hw5_tests/09_SubtractionExceptionTest/: CMakeLists.txt  subtraction_exception_test.cpp
Assignments/hw5/hw5_tests/10_MultiplicationExceptionTest/: CMakeLists.txt  multiplication_exception_test.cpp
Assignments/hw5/src/: CMakeLists.txt  Matrix.h
Assignments/hw6/: .travis.yml  CMakeLists.txt  README.md  main.cpp
Assignments/hw6/hw6_tests/: CMakeLists.txt
Assignments/hw6/hw6_tests/00_basic_tests/: CMakeLists.txt
Assignments/hw6/hw6_tests/01_hashed_entry_tests/: CMakeLists.txt  hashed_entry_check.cpp
Assignments/hw6/hw6_tests/02_hashed_dictionary_basicTests/: CMakeLists.txt  hashed_dictionary_basicTest.cpp
Assignments/hw6/hw6_tests/03_hashed_dictionary_addTest/: CMakeLists.txt  hashed_dictionary_addTest.cpp
Assignments/hw6/hw6_tests/04_hashed_dictionary_removeTest/: CMakeLists.txt  hashed_dictionary_removeTest.cpp
Assignments/hw6/hw6_tests/05_hashed_dictionary_miscTest/: CMakeLists.txt  hashed_dictionary_miscTest.cpp
Assignments/hw6/src/: CMakeLists.txt  DictionaryInterface.h  Entry.h  HashedDictionary.h  HashedEntry.h
(+4 files in other folders)
