project(hw3_tests)

add_subdirectory(lib/gtest-1.7.0)
add_subdirectory(00_basic_tests)
add_subdirectory(01_constructor_test)
add_subdirectory(02_add_to_list_test)
add_subdirectory(03_remove_test)
add_subdirectory(04_is_empty_test)
add_subdirectory(05_size_test)
add_subdirectory(06_contains_test)
add_subdirectory(07_get_frequency_test)
add_subdirectory(08_copy_constructor_test)
add_subdirectory(09_head_ptr_test)
add_subdirectory(10_tail_ptr_test)
add_subdirectory(11_mid_ptr_test)
