project(hw5_tests)

add_subdirectory(lib/gtest-1.7.0)
add_subdirectory(00_BasicTest)
add_subdirectory(01_BasicConstructorTest)
add_subdirectory(02_AdditionTests)
add_subdirectory(03_SubtractionTests)
add_subdirectory(04_ScalarMultiplicationTests)
add_subdirectory(05_MatrixMultiplicationTests)
add_subdirectory(06_MatrixMultiplicationVariableSizesTests)
add_subdirectory(07_BasicExceptionTest)
add_subdirectory(08_AdditionExceptionTest)
add_subdirectory(09_SubtractionExceptionTest)
add_subdirectory(10_MultiplicationExceptionTest)
